--- a/package.json
+++ b/package.json
@@ -78,8 +78,6 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "stylelint": "^14.5.3",
-    "stylelint-config-standard-scss": "^3.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
@@ -87,5 +85,9 @@
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "^4.7.4"
+  },
+  "devDependencies": {
+    "stylelint": "^14.5.3",
+    "stylelint-config-standard-scss": "^3.0.0"
   }
 }
